# ufl4rom

./: .gitignore  MANIFEST.in  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst
tests/integration/: conftest.py
tests/integration/utils/: test_name_scalar_integration.py
tests/unit/: conftest.py
tests/unit/test/: test_enable_logging.py
tests/unit/utils/: test_expand_sum.py  test_expand_sum_product.py  test_name_scalar.py  test_name_vector.py  test_rewrite_quotients.py
ufl4rom/: __init__.py
ufl4rom/test/: __init__.py  enable_logging.py
ufl4rom/utils/: __init__.py  backends.py  expand_sum.py  expand_sum_product.py  name.py  named_coefficient.py  named_constant.py  rewrite_quotients.py
