[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufl4rom"
version = "0.0.dev1"
authors = [
    {name = "Francesco Ballarin", email = "francesco.ballarin@unicatt.it"},
]
maintainers = [
    {name = "Francesco Ballarin", email = "francesco.ballarin@unicatt.it"},
]
description = "A collection of UFL utilities for reduced order modelling codes"
license = {file = "COPYING"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "fenics-ufl"
]

[project.urls]
homepage = "https://www.rbnicsproject.org"
repository = "https://github.com/RBniCS/ufl4rom"
issues = "https://github.com/RBniCS/ufl4rom/issues"
funding = "https://github.com/sponsors/francesco-ballarin"

[project.optional-dependencies]
backend_dolfinx = [
    "fenics-dolfinx"
]
backend_firedrake = [
    "firedrake"
]
backend_none = []
docs = [
    "sphinx"
]
lint = [
    "isort",
    "mypy",
    "ruff",
    "yamllint"
]
tests = [
    "coverage[toml]",
    "pytest",
    "pytest-random-order"
]

[tool.isort]
line_length = 120
multi_line_output = 4
order_by_type = false

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
implicit_reexport = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    # "dolfinx",
    # "dolfinx.*",
    "firedrake",
    "petsc4py",
    "petsc4py.PETSc",
    "ufl",
    "ufl.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]

[tool.ruff]
line-length = 120
select = ["ANN", "D", "E", "F", "ICN", "N", "Q", "RUF", "W"]
ignore = ["ANN101"]

[tool.ruff.per-file-ignores]
"ufl4rom/**/__init__.py" = ["F401"]

[tool.ruff.pycodestyle]
max-doc-length = 120

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.setuptools.package-data]
ufl4rom = ["py.typed"]
