[metadata]
name = ufl4rom
version = 0.0.dev1
author = Francesco Ballarin (and contributors)
email = francesco.ballarin@unicatt.it
maintainer = Francesco Ballarin
description = A collection of UFL utilities for reduced order modelling codes
url = https://github.com/RBniCS/ufl4rom
project_urls =
    Homepage = https://github.com/RBniCS/ufl4rom
    Issues = https://github.com/RBniCS/ufl4rom/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = LGPL-3.0-or-later
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >= 3.6
setup_requires =
    setuptools >= 58
    wheel
install_requires =
    fenics-ufl

[options.extras_require]
backend_dolfin =
    fenics-dolfin
backend_dolfinx =
    fenics-dolfinx
backend_firedrake =
    firedrake
backend_none =
docs =
    sphinx
lint =
    flake8
    flake8-annotations
    flake8-docstrings
    flake8-import-restrictions;python_version >= "3.7"
    flake8-isort
    flake8-quotes
tests =
    coverage
    pytest
    pytest-random-order

[flake8]
max-line-length = 120
show-source = True
docstring-convention = numpy
inline-quotes = double
i2041_exclude = ufl4rom, ufl4rom.*
i2045_include = *
i2045_exclude = ufl4rom, ufl4rom.*
ignore = ANN101, W503
exclude = .eggs, build, dist
per-file-ignores =
    ufl4rom/**/__init__.py: F401

[isort]
line_length = 120
multi_line_output=4
order_by_type=False
combine_as_imports = True
